--- a/templates/etc/systemd/system/docker-run.erb
+++ b/templates/etc/systemd/system/docker-run.erb
@@ -12,20 +12,23 @@ StartLimitInterval=20
 StartLimitBurst=5
 TimeoutStartSec=0
 Environment="HOME=/root"
-ExecStartPre=-/usr/bin/<%= @docker_command %> kill <%= @sanitised_title %>
+ExecStartPre=-/usr/bin/<%= @docker_command %> stop <%= @sanitised_title %>
 ExecStartPre=-/usr/bin/<%= @docker_command %> rm <%= @sanitised_title %>
-<% @extra_systemd_parameters.each do |key, value| -%><%= key %>=<%= value %>
-<% end -%>
-<%- if @pull_on_start %>ExecStartPre=-/usr/bin/<%= @docker_command %> pull <%= @image %>
-<% end -%>
-ExecStart=/usr/bin/<%= @docker_command %> run \
+ExecStartPre=/usr/bin/<%= @docker_command %> run -d \
         <%= @docker_run_flags %> \
         --name <%= @sanitised_title %> \
         <%= @image %> \
         <% if @command %> <%= @command %><% end %>
+<% @extra_systemd_parameters.each do |key, value| -%><%= key %>=<%= value %>
+<% end -%>
+<%- if @pull_on_start %>ExecStartPre=-/usr/bin/<%= @docker_command %> pull <%= @image %>
+<% end -%>
+ExecStart=/usr/bin/<%= @docker_command %> logs -f \
+        <%= @sanitised_title %>
 <%- if @before_stop %>ExecStop=-<%= @before_stop %>
 <% end -%>
 ExecStop=-/usr/bin/<%= @docker_command %> stop <%= @sanitised_title %>
+ExecStopPost=-/usr/bin/<%= @docker_command %> stop <%= @sanitised_title %>
 
 [Install]
 WantedBy=multi-user.target
