--- a/templates/etc/systemd/system/docker-run.erb
+++ b/templates/etc/systemd/system/docker-run.erb
@@ -13,7 +13,7 @@ StartLimitBurst=5
 TimeoutStartSec=0
 Environment="HOME=/root"
 ExecStartPre=-/usr/bin/<%= @docker_command %> stop <%= @sanitised_title %>
-ExecStartPre=-/usr/bin/<%= @docker_command %> rm <%= @sanitised_title %>
+ExecStartPre=-/usr/bin/<%= @docker_command %> rm -v <%= @sanitised_title %>
 ExecStartPre=/usr/bin/<%= @docker_command %> run -d \
         <%= @docker_run_flags %> \
         --name <%= @sanitised_title %> \
